--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,20 +1,18 @@
 {
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "bootstrap": "^4.5.3",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.4.2",
-    "react-bootstrap": "^1.4.0",
-    "sequelize": "^6.3.5"
-  }
+    "main": "server.js",
+    "dependencies": {
+        "bcrypt": "^5.0.0",
+        "bootstrap": "^4.5.3",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-session": "^1.17.1",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.4",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "pg": "^8.4.2",
+        "react-bootstrap": "^1.4.0",
+        "sequelize": "^6.3.5"
+    }
 }
